logs/rtt.20260330-084853.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent1)
warning: unexpected `cfg` condition value: `all_chapters`
 --> tests/Chap65/TestUnionFindStEph.rs:1:8
  |
1 | #![cfg(feature = "all_chapters")]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `Chap02`, `Chap03`, `Chap05`, `Chap06`, `Chap11`, `Chap12`, `Chap17`, `Chap18`, `Chap19`, `Chap21`, `Chap23`, `Chap26`, `Chap27`, `Chap28`, `Chap30`, `Chap35`, `Chap36`, `Chap37`, `Chap38`, `Chap39`, `Chap40`, `Chap41`, `Chap42`, `Chap43`, `Chap44`, `Chap45`, `Chap47`, `Chap49`, `Chap50`, `Chap51`, `Chap52`, `Chap53`, `Chap54`, `Chap55`, and `Chap56` and 12 more
  = help: consider adding `all_chapters` as a feature in `Cargo.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: requested on the command line with `-W unexpected-cfgs`

warning: `apas-verus` (test "TestUnionFindStEph") generated 1 warning
error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
   --> tests/Chap02/test_hf_scheduler.rs:197:9
    |
197 |         || x + 1,
    |         ^^ - `x` is borrowed here
    |         |
    |         may outlive borrowed value `x`
    |
note: function requires argument type to outlive `'static`
   --> tests/Chap02/test_hf_scheduler.rs:196:18
    |
196 |       let (a, b) = join(
    |  __________________^
197 | |         || x + 1,
198 | |         || x * 2,
199 | |     );
    | |_____^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
    |
197 |         move || x + 1,
    |         ++++

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
   --> tests/Chap02/test_hf_scheduler.rs:198:9
    |
198 |         || x * 2,
    |         ^^ - `x` is borrowed here
    |         |
    |         may outlive borrowed value `x`
    |
note: function requires argument type to outlive `'static`
   --> tests/Chap02/test_hf_scheduler.rs:196:18
    |
196 |       let (a, b) = join(
    |  __________________^
197 | |         || x + 1,
198 | |         || x * 2,
199 | |     );
    | |_____^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
    |
198 |         move || x * 2,
    |         ++++

For more information about this error, try `rustc --explain E0373`.
error: could not compile `apas-verus` (test "test_hf_scheduler") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 1s
